--- a/duda/index.html
+++ b/duda/index.html
@@ -38,7 +38,7 @@
     <audio src="sounds/KACHUGGA___.mp3" id="som_tecla_chick"></audio>
     <audio src="sounds/cruzramirez.mp3" id="som_tecla_cruz"></audio>
     <audio src="sounds/carros turbinados.mp3" id="som_tecla_carros"></audio>
-    <audio src="sounds/flynn rider.mp3" id="som_tecla_flynn rider"></audio>
+    <audio src="sounds/flynn rider.mp3" id="som_tecla_flynn"></audio>
     <audio src="sounds/francesco.mp3" id="som_tecla_francesco"></audio>
     <audio src="sounds/rapunzel.mp3" id="som_tecla_rapunzel"></audio>
     <audio src="sounds/matte amigo.mp3" id="som_tecla_matte"></audio>
